Better fail2ban filter

--- a/configs/fail2ban/filter.d/photonbbs.conf
+++ b/configs/fail2ban/filter.d/photonbbs.conf
@@ -6,4 +6,5 @@ before = common.conf
 
 [Definition]
 failregex   = PhotonBBS:\s+Connection from\s+<HOST>
+              xinetd.*START.*photonbbs.*from.*:<HOST>
 ignoreregex =
