Provisions nicely now.

--- a/configs/etc/fail2ban/filter.d/photonbbs.conf
+++ b/configs/etc/fail2ban/filter.d/photonbbs.conf
@@ -1,10 +1,12 @@
 # Fail2Ban filter PhotonBBS
+# typically logged in /var/log/messages syslog
 #
 
 [INCLUDES]
+# Read syslog common prefixes
 before = common.conf
 
 [Definition]
-failregex   = PhotonBBS:\s+Connection from\s+<HOST>
-              xinetd.*START.*photonbbs.*from.*:<HOST>
+failregex   = xinetd.*START.*photonbbs.*from.*:<HOST>
+              PhotonBBS:.*Connection from\s+<HOST>
 ignoreregex =
