Switch the start script to a systemd service and start init so there is proper logging for fail2ban.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,9 @@ WORKDIR /
 COPY appdeploy /
 COPY startscript /
 
+EXPOSE 23
+
 RUN bash /appdeploy
 
-ENTRYPOINT [ "/startscript" ]
+ENTRYPOINT [ "/usr/sbin/init" ]
 CMD []
