Security: Update development file policies - use scratch/ for transient data
CHANGES:
- Enhanced .gitignore to exclude development handoff files
- Added *HANDOFF*.md, *SESSION*.md, *CONTINUATION*.md patterns
- Updated copilot instructions with mandatory scratch/ directory usage
- Updated GENERIC_CONTINUATION_PROMPT.md to reference scratch/ instead of ai-assisted/
- Clarified that ALL session data, debug output, and development notes go in scratch/

REASON:
- Prevents accidental commit of sensitive development context
- Keeps public repository clean of internal development artifacts
- Establishes clear pattern for future development sessions

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,20 @@
 **/realm.txt
 .aider*
 sbin/photonbbs-tty
+
+# Development and temporary files
 /*.txt
 /scratch
+/scratch/
+**/scratch/
+
+# AI-assisted development context (use scratch/ instead!)
 /ai-assisted/202*
 /project-docs/
+*HANDOFF*.md
+*SESSION*.md
+*CONTINUATION*.md
+error.txt
+
+# Reference materials
 /reference
