Clean tools/ directory - remove test scripts from history
REMOVED FROM GIT HISTORY:
- tools/bbs-api-advanced.py (16KB) - Development testing API
- tools/bbs-test-client.py (7.5KB) - Interactive test client
- tools/combat-test-client.py (10KB) - Combat testing
- tools/simple-bbs-test.py (818 bytes) - Simple login test
- tools/test-account-creation.py (2.7KB) - Account test
- tools/test-telnet-negotiation.py (3.5KB) - Protocol test
- tools/telnet-test-proxy.py (0 bytes) - Empty file

KEPT IN REPOSITORY (21 production tools):
✅ All photonmud-* data readers (rooms, monsters, spells, etc.)
✅ All photonmud-*-import tools (CSV importers)
✅ Visualization tools (rooms-to-3d, rooms-to-svg, rooms-to-xml)
✅ file-viewer utility

GITIGNORE UPDATED:
- Added patterns to exclude future test scripts from tools/
- Prevents accidental commit of development testing tools

Test scripts removed from entire git history across all branches.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ error.txt
 
 # Reference materials
 /reference
+
+# Test and development scripts (keep in scratch/ if needed)
+tools/*-test*.py
+tools/test-*.py
+tools/bbs-*.py
+tools/combat-*.py
+tools/telnet-test-proxy.py
