--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ tools/telnet-test-proxy.py
 # CLIO logs and sessions (AI assistant working directories)
 .clio/logs/
 .clio/sessions/
+.clio/memory/
+.clio/*.json
