--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ tools/telnet-test-proxy.py
 # CLIO logs and sessions (AI assistant working directories)
 .clio/logs/
 .clio/sessions/
+.clio/snapshots/
 .clio/memory/
 .clio/*.json
