--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,6 @@ tools/bbs-*.py
 tools/combat-*.py
 tools/telnet-test-proxy.py
 
-# CLIO logs and sessions (AI assistant working directories)
-.clio/logs/
-.clio/sessions/
-.clio/memory/
-.clio/*.json
+# CLIO (managed automatically)
+.clio/*
+!.clio/instructions.md
